--- a/React-Frontend/index.html
+++ b/React-Frontend/index.html
@@ -6,6 +6,9 @@
   <link rel="icon" type="image/svg+xml" href="/logo.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <script src="https://sandbox.web.squarecdn.com/v1/square.js"></script>  
+  <script type="text/javascript" src="https://js.squareup.com/v2/paymentform"></script>
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend+Deca:wght@100..900&family=Lexend:wght@100..900&display=swap"
